--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  justify-items: center;
+  width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+.container {
+  border: 2px groove gray;
+  margin: 50px;
+  width: 400px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container h2 {
+  text-align: center;
+}
+.navbar a {
+  color: aliceblue;
+  text-decoration: none;
+  font-weight: bolder;
+  position: absolute;
+  left: 20px;
+  font-size: large;
+}
+.navbar {
+  background-color: rgb(0, 83, 190);
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+}
+.boxes {
+  display: flex;
+}
+.links {
+  text-decoration: none;
+  padding-left: 30px;
+}
+.container h1,
+.container p {
+  text-align: center;
 }
